--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^10.0.0",
+    "@react-three/drei": "^9.121.2-canary-test01.1",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@sentry/nextjs": "^8.52.0",
     "clsx": "^2.1.1",
@@ -17,8 +17,8 @@
     "motion": "^12.0.5",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
