--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.121.2-canary-test01.1",
+    "@react-three/drei": "^10.0.0",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@sentry/nextjs": "^8.52.0",
     "clsx": "^2.1.1",
